--- a/Data_Types,_Variables_and_I_O.ipynb
+++ b/Data_Types,_Variables_and_I_O.ipynb
@@ -27,12 +27,83 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "gcsfa9UspsZh"
+        "id": "gcsfa9UspsZh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43b0bdc9-a000-413e-b281-c39f2730b5ad"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3000\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(3000)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(4+5)"
+      ],
+      "metadata": {
+        "id": "IWj8cqv601WI",
+        "outputId": "112c9bdc-81e6-4969-aaad-2e26b23dca4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(4 +   4 )"
+      ],
+      "metadata": {
+        "id": "WZltQ3QL07Rx",
+        "outputId": "0a9a83a8-9f5a-40aa-9a15-e62cefb9f52e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print()"
+      ],
+      "metadata": {
+        "id": "I25I-zJZ0-Wk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
