--- a/Data_Types,_Variables_and_I_O.ipynb
+++ b/Data_Types,_Variables_and_I_O.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "gcsfa9UspsZh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43b0bdc9-a000-413e-b281-c39f2730b5ad"
+        "outputId": "0c830bf1-fca9-4531-fae3-7293d09552a5"
       },
       "outputs": [
         {
@@ -45,6 +45,7 @@
         }
       ],
       "source": [
+        "# Module 1 Python 1 Data Types, Variables and I/O\n",
         "print(3000)"
       ]
     },
@@ -54,11 +55,11 @@
         "print(4+5)"
       ],
       "metadata": {
-        "id": "IWj8cqv601WI",
-        "outputId": "112c9bdc-81e6-4969-aaad-2e26b23dca4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IWj8cqv601WI",
+        "outputId": "112c9bdc-81e6-4969-aaad-2e26b23dca4e"
       },
       "execution_count": 2,
       "outputs": [
@@ -77,11 +78,11 @@
         "print(4 +   4 )"
       ],
       "metadata": {
-        "id": "WZltQ3QL07Rx",
-        "outputId": "0a9a83a8-9f5a-40aa-9a15-e62cefb9f52e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WZltQ3QL07Rx",
+        "outputId": "0a9a83a8-9f5a-40aa-9a15-e62cefb9f52e"
       },
       "execution_count": 3,
       "outputs": [
@@ -97,10 +98,38 @@
     {
       "cell_type": "code",
       "source": [
-        "print()"
+        "PRINT(\"will this work?\") # python is case sensitive"
       ],
       "metadata": {
-        "id": "I25I-zJZ0-Wk"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "I25I-zJZ0-Wk",
+        "outputId": "1941c420-6036-4005-cc76-b96d49a4c242"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'PRINT' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-b6ff64888dea>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mPRINT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"will this work?\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# python is case sensitive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'PRINT' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\")"
+      ],
+      "metadata": {
+        "id": "jd_FoxQp1X6b"
       },
       "execution_count": null,
       "outputs": []
