--- a/Data_Types,_Variables_and_I_O.ipynb
+++ b/Data_Types,_Variables_and_I_O.ipynb
@@ -126,10 +126,33 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"\")"
+        "print(\"Module 1 : Python 1 : Data types, variables and I/O\")"
       ],
       "metadata": {
-        "id": "jd_FoxQp1X6b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jd_FoxQp1X6b",
+        "outputId": "05818409-e118-4b40-8a30-e14282d31a0f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Module 1 : Python 1 : Data types, variables and I/O\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Module 1 : Python 1 ')"
+      ],
+      "metadata": {
+        "id": "BQJd9yer2tuw"
       },
       "execution_count": null,
       "outputs": []
